@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use MARC::Convert::Wikidata::Utils qw(clean_edition_number);
-use Test::More 'tests' => 52;
+use Test::More 'tests' => 53;
 use Test::NoWarnings;
 use Unicode::UTF8 qw(decode_utf8 encode_utf8);
 
@@ -259,3 +259,8 @@ is($ret, 2, encode_utf8("Edition number '$input_edition_number' after cleanup.")
 $input_edition_number = decode_utf8('1. vydání v této podobě');
 $ret = clean_edition_number($input_edition_number);
 is($ret, 1, encode_utf8("Edition number '$input_edition_number' after cleanup."));
+
+# Test.
+$input_edition_number = decode_utf8('Šesté, nezměněné vydání');
+$ret = clean_edition_number($input_edition_number);
+is($ret, 6, encode_utf8("Edition number '$input_edition_number' after cleanup."));
